styles/about.module.scss
@import './variables.module.scss';

.container {
  padding: 0;
  max-width: $md;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  font-size: 1.2em;

  > * + * {
    margin-top: 1em;
  }

  h1 {
    font-size: 2em;
    text-transform: uppercase;
    text-align: center;
  }

  p {
    text-align: center;
    max-width: 40ch;
  }

  .description {
    font-weight: 100;

    p {
      max-width: 55ch;
    }

    > * + * {
      margin-top: 1em;
    }
  }

  hr {
    width: 100%;
    border: 0;
    height: 1em;

    position: relative;

    &:after {
      position: absolute;
      content: '';
      height: 1em;
      width: 600%;
      background: transparent url(./borders/border-black.svg) 0 repeat-x;
    }
  }
}

.image {
  max-width: 90%;
}

.avatar {
  display: flex;
  justify-content: space-evenly;
  align-items: flex-end;
  flex-direction: column-reverse;
  @media (min-width: $md) {
    flex-direction: row;
  }
}

.profile {
  flex: 1;
  display: flex;
  flex-direction: column;
  max-width: 25ch;
  padding: 2em 0;

  @media (min-width: $md) {
    padding: 0;
  }

  align-items: center;

  > * + * {
    margin-top: 0.5rem;
  }

  h1,
  h2,
  h3 {
    text-align: center;
  }

  h1,
  h3 {
    font-size: 1.5em;
  }

  h2 {
    font-weight: normal;

    &:before {
      content: '“';
    }

    &:after {
      content: '”';
    }
  }

  h3 {
    > * + * {
      margin-left: 0.5em;
    }
  }
}

